# lab2sem

./: README.md
1lab/: CMakeLists.txt  main.cpp
2lab/: CMakeLists.txt  main.cpp
3lab/: CMakeLists.txt  main.cpp
6lab/: CMakeLists.txt  log.cpp  log.hpp
7lab/: CMakeLists.txt  main.cpp
8lab/: CMakeLists.txt  main.cpp
